# AI-Backend-Test

./: .env.example  .gitignore  README.md  _quarto.yml  docker-compose.yml  pyproject.toml
docs/: search.json
docs/report/: index.html
report/: index.qmd
tasks/task1_algorithmic/: README.md  group_alarms.py  utils.py
tasks/task1_algorithmic/data/: .gitkeep
tasks/task2_sql/: Q5_schema.md  Q6_explanation.md  README.md
tasks/task2_sql/optimisation/: README.md  explain_analyze.txt  slow_query.sql
tasks/task2_sql/queries/: .gitkeep  q1_top_sites.sql  q2_rolling_false_alarm_rate.sql  q3_dispatch_percentiles.sql  q4_predictions_no_events.sql  q6_optimised.sql
tasks/task2_sql/schema/: .gitkeep  schema.sql
tasks/task2_sql/seed/: .gitkeep
tasks/task3_python/: README.md  Summary.md
tasks/task3_python/option_b_fastapi_ingestion/: Dockerfile  README.md  requirements.txt
tasks/task3_python/option_b_fastapi_ingestion/app/: __init__.py  config.py  dependencies.py  main.py  schemas.py
tasks/task3_python/option_b_fastapi_ingestion/app/cache/: recent_event_cache.py
tasks/task3_python/option_b_fastapi_ingestion/app/controllers/: alarms.py
tasks/task3_python/option_b_fastapi_ingestion/app/db/: __init__.py  pool.py  schema.sql
tasks/task3_python/option_b_fastapi_ingestion/app/repositories/: alarm_repository.py
tasks/task3_python/option_b_fastapi_ingestion/app/services/: alarm_service.py
tasks/task3_python/option_b_fastapi_ingestion/tests/: test_api.py
tasks/task4_optimization/: README.md  measurements.md  optimized.py  slow_code.py
(+3 files in other folders)
